Fixed modal mis-aligned close icon

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -25,7 +25,6 @@
 #joinus {
   height: 565px;
   width: 830px;
-  margin-top: 10%;
   #wrapper {
     #register {
       margin: 0;
